fix small switch alignment bug

--- a/ifs/app/shared/views/css/main.css
+++ b/ifs/app/shared/views/css/main.css
@@ -38,6 +38,7 @@ body {
   display: inline-block;
   width: 3em;
   height: 1.5em;
+  margin-top: 0.3em;
 }
 
 /* Hide default HTML checkbox */
